tests/snapshots/ui_snapshots__dashboard_palette_filters.snap
---
source: tests/ui_snapshots.rs
assertion_line: 765
expression: render(&app)
---
"                            │  live   findings    history    plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ spec                    │                                                             "
"  ○ plan         ╭ command ─────────────────────────────────────────────╮                 "
"  ○ plan-review  │  run▏                                                │                 "
"  ○ tests-red    │                                                      │ r i f y         "
"  ○ implement    │  run stage / open item                               │                 "
"  ○ dual-review  │  cancel running stage                                │pl → dual        "
"  ○ coverage     │  run check.sh fast                                   │ plan live       "
"  » next: spec   │  run full check.sh                                   │a takeover       "
"  architecture.md│  open in running nvim                                │smiss · / filter "
"    run `ritual a│  run spec                                            │ariants          "
"    to ground pla│  run plan                                            │ts               "
"                 │  run plan-review                                     │pro              "
" 󰚩 AGENTS ───────│  run tests-red                                       │s                "
"  󰚩 claude …     │  run implement                                       │res              "
"  󰚩 codex …      │  run dual-review                                     │-comment         "
"  󱘖 bridge …     │  run coverage                                        │app              "
"   nvim …        ╰──────────────────────────────────────────────────────╯                 "
"   check ?                  │     enter  run stage    :  palette    ?  keys    q  quit    "
"                            │                                                             "
" RITUAL   detached  detached                                                          "
