tests/snapshots/ui_snapshots__dashboard_palette_surfaces_the_architect_action.snap
---
source: tests/ui_snapshots.rs
assertion_line: 583
expression: out
---
"                            │  live   findings    history    plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ spec                    │                                                             "
"  ○ plan                    │                    █▀█ █ ▀█▀ █ █ ▄▀█ █                      "
"  ○ plan-review             │                    █▀▄ █  █  █▄█ █▀█ █▄▄                    "
"  ○ tests-red               │         s u m m o n  ·  r e v i e w  ·  v e r i f y         "
"  ○ implement               │                                                             "
"  ○ dual-review             │ pipeline  spec → plan → review → tests → impl → dual        "
"  ○ coverage     ╭ command ─────────────────────────────────────────────╮ plan live       "
"  » next: spec   │  architec▏                                           │a takeover       "
"  architecture.md│                                                      │smiss · / filter "
"    run `ritual a│  refresh the architecture map (palette-only)         │ariants          "
"    to ground pla╰──────────────────────────────────────────────────────╯ts               "
"                            │   safety  redaction · verify-log chain · repro              "
" 󰚩 AGENTS ───────────────── │       ci  --ci → JUnit · --json + exit codes                "
"  󰚩 claude …                │ parallel  new --worktree · [ ] switch features              "
"  󰚩 codex …                 │     more  ps · attach · doctor · clean · pr-comment         "
"  󱘖 bridge …                │    guide  5: the detailed guide & tips, in-app              "
"   nvim …                   │                                                             "
"   check ?                  │     enter  run stage    :  palette    ?  keys    q  quit    "
"                            │                                                             "
" RITUAL   detached  detached                                                          "
