tests/snapshots/ui_snapshots__dashboard_plan_tab_renders_markdown.snap
---
source: tests/ui_snapshots.rs
assertion_line: 569
expression: render(&app)
---
"                            │   live    findings    history   plan   guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ spec                    │ 󰲡 The Plan                                                  "
"  ○ plan                    │                                                             "
"  ○ plan-review             │ Some bold intro with  inline code .                         "
"  ○ tests-red               │                                                             "
"  ○ implement               │  • first step                                               "
"  ○ dual-review             │  • second step                                              "
"  ○ coverage                │    • nested detail                                          "
"  » next: spec              │                                                             "
"                            │  rust                                                       "
" 󰚩 AGENTS ───────────────── │   fn ritual() {}                                            "
"  󰚩 claude …                │                                                             "
"  󰚩 codex …                 │ │ stage │ state │                                           "
"  󱘖 bridge …                │ ─────────────────                                           "
"   nvim …                   │ │ spec  │ done  │                                           "
"   check ?                  │                                                             "
"                            │                                                             "
"   detached                 │                                                             "
"                            │                                                             "
"                            │                                                             "
" RITUAL   detached  detached                                                          "
