tests/snapshots/ui_snapshots__dashboard_running_with_budget.snap
---
source: tests/ui_snapshots.rs
expression: render(&app)
---
"                            │  live   findings    history    plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ spec                    │                                                             "
"  ○ plan                    │                                                             "
"  ○ plan-review             │                                                             "
"  ○ tests-red               │                                                             "
"  ○ implement               │                                                             "
"  ○ dual-review             │                                                             "
"  ○ coverage                │                                                             "
"                            │                                                             "
" 󰚩 AGENTS ───────────────── │                                                             "
"  󰚩 claude …                │                  waiting for agent output…                  "
"  󰚩 codex …                 │                                                             "
"  󱘖 bridge …                │                                                             "
"   nvim …                   │                                                             "
"   check green              │                                                             "
"                            │                                                             "
"   detached                 │                                                             "
"                            │                                                             "
"                            │                                                             "
"                            │                                                             "
" RITUAL   detached  detached                         $4.20/$5  ⠋ plan-review   ok "
