tests/snapshots/ui_snapshots__dashboard_settings_edit_error.snap
---
source: tests/ui_snapshots.rs
expression: "render_at(&app, 90, 30)"
---
"                            │  live   findings    history    plan    guide              "
"  PIPELINE ─╭ settings - project config ─────────────────────────────────────╮────────────"
"  ○ spec    │                                                                │            "
"  ○ plan    │ budgets                                                        │            "
"  ○ plan-rev│  plan-review                                       5 (default) │            "
"  ○ tests-re│  dual-review                                      10 (default) │            "
"  ○ implemen│  doc chat                                        0.5 (default) │            "
"  ○ dual-rev│  finding fix (per run)                             3 (project) │            "
"            │  code fix (per run)                                5 (default) │            "
" 󰚩 AGENTS ──│  daily ceiling                                     - (default) │f y         "
"  󰚩 claude …│ routing                                                        │            "
"  󰚩 codex … │  model: plan                                       - (default) │dual        "
"  󱘖 bridge …│  model: plan-review                                - (default) │ live       "
"   nvim …   │  model: dual-review                                - (default) │eover       "
"   check ?  │  fallback models                                   - (default) │ · / filter "
"            │  effort: plan                                      - (default) │ts          "
"   detached │  effort: plan-fix                                  - (default) │            "
"            │  effort: plan-review                               - (default) │            "
"            │  effort: dual-review                               - (default) │            "
"            │ appearance                                                     │            "
"            │  theme                                      eldritch (default) │ent         "
"            │  icons                                          nerd (default) │            "
"            │  transparency                                   true (default) │            "
"            │ behavior                                                       │ q  quit    "
"            │  notifications                                  true (default) │            "
"            │  finding fix (per run): abc▏                                   │            "
"            │  USD cap for ONE F-apply batch fix run - number > 0            │            "
"            │  ✗ must be a number > 0                                        │            "
"            ╰────────────────────────────────────────────────────────────────╯            "
" RITUAL   detached  detached                                                          "
