tests/snapshots/ui_snapshots__dashboard_settings_scrolled_to_last_entry.snap
---
source: tests/ui_snapshots.rs
expression: render(&app)
---
"                            │  live   findings    history    plan    guide              "
"  PIPELINE ─╭ settings - project config ─────────────────────────────────────╮────────────"
"  ○ spec    │                                                                │            "
"  ○ plan    │  model: plan-review                                - (default) │            "
"  ○ plan-rev│  model: dual-review                                - (default) │            "
"  ○ tests-re│  fallback models                                   - (default) │f y         "
"  ○ implemen│  effort: plan                                      - (default) │            "
"  ○ dual-rev│  effort: plan-fix                                  - (default) │dual        "
"  ○ coverage│  effort: plan-review                               - (default) │ live       "
"            │  effort: dual-review                               - (default) │eover       "
" 󰚩 AGENTS ──│ appearance                                                     │ · / filter "
"  󰚩 claude …│  theme                                      eldritch (default) │ts          "
"  󰚩 codex … │  icons                                          nerd (default) │            "
"  󱘖 bridge …│  transparency                                   true (default) │            "
"   nvim …   │ behavior                                                       │            "
"   check ?  │  notifications                                  true (default) │            "
"            │  redaction                                      true (default) │ent         "
"   detached │  offline                                       false (default) │            "
"            │  base ref                                       main (default) │            "
"            │  check timeout (s)                               600 (default) │ q  quit    "
"            ╰────────────────────────────────────────────────────────────────╯            "
" RITUAL   detached  detached                                                          "
