tests/snapshots/ui_snapshots__dashboard_sidebar_stale_stage_and_next_line.snap
---
source: tests/ui_snapshots.rs
assertion_line: 508
expression: out
---
"                            │  live   findings    history    plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"   spec                     │                                                             "
"   plan                    │                    █▀█ █ ▀█▀ █ █ ▄▀█ █                      "
"   plan-review             │                    █▀▄ █  █  █▄█ █▀█ █▄▄                    "
"   tests-red               │         s u m m o n  ·  r e v i e w  ·  v e r i f y         "
"   implement                │                                                             "
"   dual-review              │ pipeline  spec → plan → review → tests → impl → dual        "
"   coverage                 │     chat  s: chat to write/edit the spec or plan live       "
"  » next: plan              │     runs  daemons: quit freely, reattach · a takeover       "
"  spec.md changed after this│ findings  enter details · F/m triage · d dismiss · / filter "
"    ran - rerun plan        │    gates  mutants · secrets · lessons · invariants          "
"                            │    money  daily budget · per-run caps · costs               "
" 󰚩 AGENTS ───────────────── │   safety  redaction · verify-log chain · repro              "
"  󰚩 claude …                │       ci  --ci → JUnit · --json + exit codes                "
"  󰚩 codex …                 │ parallel  new --worktree · [ ] switch features              "
"  󱘖 bridge …                │     more  ps · attach · doctor · clean · pr-comment         "
"   nvim …                   │    guide  5: the detailed guide & tips, in-app              "
"   check ?                  │                                                             "
"                            │     enter  run stage    :  palette    ?  keys    q  quit    "
"   detached                 │                                                             "
" RITUAL   detached  t                                                                 "
