tests/snapshots/ui_snapshots__dashboard_sidebar_stale_stage_ascii.snap
---
source: tests/ui_snapshots.rs
assertion_line: 507
expression: out
---
"                            │ [live]  findings    history    plan    guide                "
" # PIPELINE ─────────────── │─────────────────────────────────────────────────────────────"
"  [x] spec                  │                                                             "
"  [x] plan [~]              │                    █▀█ █ ▀█▀ █ █ ▄▀█ █                      "
"  [x] plan-review [~]       │                    █▀▄ █  █  █▄█ █▀█ █▄▄                    "
"  [x] tests-red [~]         │         s u m m o n  ·  r e v i e w  ·  v e r i f y         "
"  [x] implement             │                                                             "
"  [x] dual-review           │ pipeline  spec → plan → review → tests → impl → dual        "
"  [x] coverage              │     chat  s: chat to write/edit the spec or plan live       "
"  » next: plan              │     runs  daemons: quit freely, reattach · a takeover       "
"  spec.md changed after this│ findings  enter details · F/m triage · d dismiss · / filter "
"                            │    gates  mutants · secrets · lessons · invariants          "
" ai: AGENTS ─────────────── │    money  daily budget · per-run caps · costs               "
"  ai: claude …              │   safety  redaction · verify-log chain · repro              "
"  ai: codex …               │       ci  --ci → JUnit · --json + exit codes                "
"  <> bridge …               │ parallel  new --worktree · [ ] switch features              "
"  nv nvim …                 │     more  ps · attach · doctor · clean · pr-comment         "
"  chk check ?               │    guide  5: the detailed guide & tips, in-app              "
"                            │                                                             "
"  br: detached              │     enter  run stage    :  palette    ?  keys    q  quit    "
"                            │                                                             "
" RITUAL  br: detached  t                                                                  "
