tests/snapshots/ui_snapshots__dashboard_spec_chat_ascii.snap
---
source: tests/ui_snapshots.rs
assertion_line: 547
expression: "render_at(&app, 100, 26)"
---
"                            │ spec · § Behavior (the contract: WHAT,│ ai: chat · spec · § Behavior ("
" # PIPELINE ─────────────── │# Feature: Audio                       │› make behavior stricter: retry"
"  ( ) spec                  │                                       │3x                             "
"  ( ) plan                  │## Goal                                │Tightening the retry rule.     "
"  ( ) plan-review           │                                       │[x] $0.030 4.2s                "
"  ( ) tests-red             │low-latency playback                   │  ✓ spec updated · $0.030      "
"  ( ) implement             │                                       │                               "
"  ( ) dual-review           │## Behavior (the contract: WHAT, not   │                               "
"  ( ) coverage              │HOW)                                   │                               "
"                            │                                       │                               "
" ai: AGENTS ─────────────── │must retry on drop                     │                               "
"  ai: claude …              │                                       │                               "
"  ai: codex …               │## Edge cases & failure modes          │                               "
"  <> bridge …               │                                       │                               "
"  nv nvim …                 │## Out of scope                        │                               "
"  chk check ?               │                                       │                               "
"                            │                                       │                               "
"  br: detached              │                                       │                               "
"                            │                                       │                               "
"                            │                                       │                               "
"                            │                                       │                               "
"                            │                                       │                               "
"                            │                                       │                               "
"                            │                                       │ > and ▏cap it at 3 attempts   "
"                            │                                       │ enter send · alt+enter ⏎ · tab"
" RITUAL  br: detached  detached                                                                     "
