tests/snapshots/ui_snapshots__dashboard_spec_chat_narrow.snap
---
source: tests/ui_snapshots.rs
assertion_line: 526
expression: "render_at(&app, 80, 24)"
---
" spec · § Behavior (the contract: WHAT, not│ 󰚩 chat · spec · § Behavior (the con"
"󰲡 Feature: Audio                           │› make behavior stricter: retry 3x  "
"                                           │Tightening the retry rule.          "
"󰲣 Goal                                     │ $0.030 4.2s                        "
"                                           │  ✓ spec updated · $0.030           "
"low-latency playback                       │                                    "
"                                           │                                    "
"󰲣 Behavior (the contract: WHAT, not HOW)   │                                    "
"                                           │                                    "
"must retry on drop                         │                                    "
"                                           │                                    "
"󰲣 Edge cases & failure modes               │                                    "
"                                           │                                    "
"󰲣 Out of scope                             │                                    "
"                                           │                                    "
"                                           │                                    "
"                                           │                                    "
"                                           │                                    "
"                                           │                                    "
"                                           │                                    "
"                                           │                                    "
"                                           │  and ▏cap it at 3 attempts         "
"                                           │ enter send · alt+enter ⏎ · tab targ"
" RITUAL   detached  detached                                                "
